public/examples/errors/operator-expected.smol
BEGIN
READ(a, b);
x := a + + b;
WRITE(x);
END